   * Add --quiet and --verbose flags. (#40)
 * moggsplit: --m3u option to write an M3U playlist of the new files. (#39)
 * mid3iconv: Fix crash when processing TCML or TIPL frames. (#41)
 * VCommentDict: Correctly normalize key names for .keys() iterator. (#45)
 * MP3: Correct length calculation for MPEG-2 files. (#46)
 * oggflac: Fix typo in docstring. (#53)

1.18 - 2009.10.22
 * ASF:
   * Distinguish between empty and absent tag values in
     ContentDescriptionObjects. (#29)
 * mid3iconv:
   * Fix a crash when processing empty (invalid) text frames.
 * MAJOR API INCOMPATIBILITY!!!!
   * EasyID3FileType is now in mutagen.easyid3, not mutagen.id3. This
     change was necessary to restore API compatibility with 1.16, as
     1.17 accidentally contained a circular import preventing
     mutagen.easyid3 from importing by itself. (#32)

1.17 - 2009.10.07
 * ID3: 
   * Support for the iTunes non-standard TSO2 and TSOC frames.
   * Attempt to recover from bad SYLT frames. (#2)
   * Attempt to recover from faulty extended header flags. (#4, #21)
   * Fix a bug in ID3v2.4 footer flag detection, (#5)
 * MP4:
   * Don't fail or double-encode UTF-8 strings when given a str.
   * Don't corrupt 64 bit atom sizes when resizing atoms. (#17)
 * EasyID3:
   * Extension API for defining new "easy" tags at runtime.
   * Support for many, many more tags.
 * OggVorbis, OggSpeex: Handle bitrates below 0 as per the spec. (#30)
 * EasyMP4: Like EasyID3, but for iTunes MPEG-4 files.
 * mutagen.File: New 'easy=True' argument to create new EasyMP3, EasyMP4,
   EasyTrueAudio, and EasyID3FileType instances.

1.16 - 2009.06.15
 * Website / code repository move.
 * Bug Fixes:
   * EasyID3: Invalid keys now raise KeyError (and ValueError).
   * mutagen.File: .flac files with an ID3 tag will be opened as FLAC.
 * MAJOR API INCOMPATIBILITY!!!!
   * Python 2.6 has required us to rename the .format attribute of M4A/MP4
     cover atoms, because it conflicts with the new str.format method.